--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "jwt-encode": "^1.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
