--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "jwt-encode": "^1.0.1",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-jwt": "^1.2.1",
+    "react-scroll": "^1.9.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
